# tiny-interpreter

./: CMakeLists.txt  README.md  Tinypln.sln  ast.cpp  ast.h  dictionary.cpp  dictionary.h  environment.cpp  environment.h  interpreter.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  value.cpp  value.h
Resource/: call.l  closure.l  closure1.l  comp.l  copy.l  dowhile.l  flowc.l  fun.l  fun1.l  fun2.l  fz.l  neg.l  newtest1.l  pl.l  print.l  str.l  var.l  vars.l  varxixixi.h  while.l
Tinypln/: Main.cpp  Tinypln.vcxproj  Tinypln.vcxproj.filters  add.cpp  add.h  arr.l  ast.cpp  ast.h  call.l  closure.l  dictionary.cpp  dictionary.h  digui.l  divide.cpp  divide.h  environment.cpp  environment.h  equal.cpp  equal.h  error.cpp  error.h  exception.cpp  exception.h  fibon.l  flowc.l  fortest.l  fun.l  fun1.l  fun2.l  greater.cpp  greater.h  iftest.l  innerscope.cpp  innerscope.h  interpreter.cpp  interpreter.h  less.cpp  less.h  locvar.l  minus.cpp  (+15 more)
include/: GlobalScope.h  ast.h  dictionary.h  environment.h  exception.h  innerscope.h  interpreter.h  parser.h  scanner.h  token.h  value.h
include/primitives/: add.h  divide.h  equal.h  greater.h  less.h  minus.h  multiply.h  posi.h  primFun.h
primitives/: add.cpp  add.h  divide.cpp  divide.h  greater.cpp  greater.h  less.cpp  less.h  minus.cpp  minus.h  multiply.cpp  multiply.h  primFun.h  util.cpp  util.h
sources/: GlobalScope.cpp  ast.cpp  ast.h  dictionary.cpp  environment.cpp  exception.cpp  innerscope.cpp  interpreter.cpp  parser.cpp  scanner.cpp  token.cpp  value.cpp
sources/primitives/: add.cpp  divide.cpp  equal.cpp  greater.cpp  less.cpp  minus.cpp  multiply.cpp  posi.cpp
test/: main.cpp  test.h  unittest.cpp  unittest.h
util/: error.cpp  error.h  util.h
